--- a/css/web-ring-styles.css
+++ b/css/web-ring-styles.css
@@ -47,7 +47,7 @@ p{
     margin: auto;
 }
 
-.post{
+.about {
     border: 1px solid var(--dark-color);
     margin-bottom: 1em;
     padding: .5em 1em;
