--- a/css/web-ring-styles.css
+++ b/css/web-ring-styles.css
@@ -3,38 +3,49 @@
     src: url("./BUBBLEGUMS.woff") format('woff');
   }
 
+:root {
+    --background-color: rgb(1, 2, 66);
+    --light-color: #c9aaaa;
+    --dark-color: rgb(0, 0, 0);
+    --link-color: rgb(255, 0, 153);
+}
 .nav-bar {
     position: fixed;
     z-index: 9999;
     top: 0px;
-    width: 100%;
-    background-color: black;
+    width: 85.5%;
+    background-color: rgb(27, 42, 70);
+}
+h2 {
+    font-family: bubblegum, sans-serif;
+    font-size: 24px;
+    margin: auto;
+    color: rgb(234, 237, 240);
+    font-weight:100;
+    margin-left: 50px;
 }
 
 .img-holder {
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
-    justify-content: space-between;
+    justify-content:center;
+    
   }
 
   .img-holder .item {
-    flex-grow: 1;
-    width: 25%;
+    flex-grow: 0;
+    width: 15%;
     margin: 20px;
   } 
 
   .img-holder img {
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 90%;
   }
 
-:root {
-    --background-color: rgb(211, 177, 177);
-    --light-color: #ad8989;
-    --dark-color: rgb(0, 0, 0);
-    --link-color: rgb(255, 0, 153);
-}
+
+
 
 body{
     font-family: "Nerko One", cursive;
@@ -50,8 +61,11 @@ main{
     max-width: 1080px;
     margin: 0 auto;
     padding: 20px;
-    background-color: rgb(232, 223, 210);
+    background-color: rgb(170, 186, 219);
+    background-image: url("bunny-background");
 }
+
+
 
 #head {
     display: flex;
@@ -72,68 +86,28 @@ h1{
     font-size: 3em;
 }
 
-h2 {
-    font-family: bubblegum, sans-serif;
-    font-size: 24px;
-    margin: auto;
-    color: aliceblue;
-    font-weight:100;
-    margin-left: 50px;
+
+
+
+.awards {
+    width: 10%;
 }
+      
 p{
     font-family: "Handjet", sans-serif;
     font-size: 24px;
     margin: auto;
+    color:rgb(3, 21, 36);
 }
 
-.about {
+.about, #supportnj {
     border: 1px solid var(--dark-color);
     margin-bottom: 1em;
     padding: .5em 1em;
 }
 
-/* changes the color of text*/
-#post {
-    border: 1px solid var(--dark-color);
-    background-color: gold;
-    margin-bottom: 1em;
-    padding: .5em 1em;
-}
-
-/* these styles are shared between .post and #post */
-.post, #post{
-    .img-container {
-        aspect-ratio: 3/2;
-    }
-    img {   /*sizing of the images in post */
-        width: 0%;
-        height: auto;
-        display: block;
-    }
-    a {  /* the color of the link and text on index */
-        color: var(--link-color);
-        background-color: var(--light-color);
-        text-decoration: none;
-    }
+.hover 
     a:hover {
         text-decoration: underline;
-    }
 }
 
-/*changing the color and boldness of the second h2, secons box */
-.special-headline {
-    font-weight: 900;
-    color:rgb(255, 0, 153)
-}
-
-.highlight {
-    background-color: var(--dark-color);
-    color: var(--light-color);
-    h2{
-        color: var(--light-color);
-    }
-}
-
-.bold {
-    font-weight: 900;
-}
