--- a/css/web-ring-styles.css
+++ b/css/web-ring-styles.css
@@ -30,8 +30,7 @@ h2 {
     flex-wrap: wrap;
     align-content: flex-start;
     justify-content:center;
-    
-  }
+}
 
   .img-holder .item {
     flex-grow: 0;
@@ -69,20 +68,31 @@ main{
         font-size: 16px;
  }
 
-.img-wrapper {
+ .awards {
+    column-count: 3;
+    margin: 0 auto;
+  }
+
+/* for sizing the image
+ .img-wrapper { 
     width: 75%;
     margin: 0 auto;
     img {
         width: 100%;
         height: auto;
     }
-}
+ } */
       
 p{
     font-family: "Handjet", sans-serif;
     font-size: 24px;
     margin: auto;
     color:rgb(3, 21, 36);
+}
+
+.externallink {
+    margin-bottom: 1em;
+    padding: .5em 1em;
 }
 
 .about, #supportnj, .awards {
