--- a/css/web-ring-styles.css
+++ b/css/web-ring-styles.css
@@ -43,6 +43,12 @@ h2 {
     width: 90%;
   }
 
+  .awards1 .awards2 {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content:center;
+}
 
 main{
     position: relative; 
@@ -68,10 +74,11 @@ main{
         font-size: 16px;
  }
 
- .awards {
+/* .awards {
     column-count: 3;
     margin: 0 auto;
   }
+    */
 
 /* for sizing the image
  .img-wrapper { 
