--- a/css/web-ring-styles.css
+++ b/css/web-ring-styles.css
@@ -32,22 +32,26 @@ h2 {
     justify-content:center;
 }
 
-  .img-holder .item {
+.img-holder .item {
     flex-grow: 0;
     width: 15%;
     margin: 20px;
-  } 
+} 
 
-  .img-holder img {
+.img-holder img {
     height: 90%;
     width: 90%;
-  }
+}
 
-  .awards1 .awards2 {
+.awards {
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
     justify-content:center;
+}
+.awards .text {
+    flex-grow: 0;
+    margin: 20px;
 }
 
 main{
