--- a/css/web-ring-styles.css
+++ b/css/web-ring-styles.css
@@ -121,6 +121,8 @@ p{
 .hover {
     a{
         text-decoration: none;
+        color: beige;
+        font-weight: 300;
     }
     a:hover {
         text-decoration: underline;
